# F1TENTH-University-Of-Florida

./: LICENSE  README.md
Computer_vision/: README.md
Computer_vision/comp_vison_ws/devel/: .catkin  .rosinstall  setup.sh
F-110/Code/: new_pid_error.py
F-110/Code/Scripts/: control1.py  pid_error1.py  pid_error_example.py  pid_test.py  talker.py  third_control.py  third_dead_mans_swtich.py  third_pid_error.py
F-110/Documents/: Process.docx  ROS.docx  V2G Research May 18 - May 25.docx  zed camera.docx
F-110/Guidelines/: Gazebo Simulation.docx  Hokuyo LiDAR Configuration_.docx  Particle Filter Localization.docx  RVIZ Simulation (New F1tenth).docx  Setting Up Hector Slam.docx  TMUX.docx  UDEV RULES.docx  guidelines for Pure Pursuit.docx  obstacle_avoidance_with_purepursuit.docx
F-110/Powerpoints/: Progress Report - Spring 2020.pptx  Research Summary.pptx
F-110/Sketchup_Worlds/: Angled_Walls_Room.dae  Wall and obstacle.dae  Wall_and_obstacle.dae  Wall_and_obstacle1.dae  left_room_obstacle.dae  obstacles1.dae  obstacles2.dae  square_room.dae  square_room_left.dae  square_room_right.dae
MapGenerator/: CMakeLists.txt
MapGenerator/io_tools/: io_tools.cpp
MapGenerator/src/: MapGenerator.cpp
Path_planning/: README.md
Path_planning/Algorithms/: August_Robotics_Test_Prob2.py  Moving_Robot.py  PathPlanning_Algo.py
Path_planning/MapGenerator/include/: MyImage.hpp
Perception/: README.md
Perception/object-detection/: MAIN.ipynb  allinone.ipynb  architecture.ipynb  getDataset.ipynb  loss.ipynb  temp.py
catkin_ws/devel/: local_setup.sh
(+113 files in other folders)
